be: api blood registration (create, get all, get by user, get detail, approve)
